# prod-template

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
crates/database/: Cargo.toml
crates/database/migration/: Cargo.toml  README.md
crates/database/migration/src/: lib.rs  m20220101_000001_transaction_table.rs
crates/database/src/: lib.rs
crates/database/src/entities/: mod.rs  prelude.rs  transactions.rs
crates/database/src/model/: transaction.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: cli.rs  environment.rs  main.rs  server.rs
crates/rpc/src/api/: method.rs  mod.rs  request.rs  response.rs  validator.rs
crates/rpc/src/api/handlers/: fallback.rs  mod.rs  rpc.rs
crates/rpc/src/api/handlers/methods/: mod.rs  send_raw.rs  transaction_status.rs
crates/rpc/src/api/middleware/: json_validation.rs  method_validation.rs  mod.rs
crates/spammer/: Cargo.toml
crates/spammer/src/: cli.rs  client.rs  config.rs  environment.rs  main.rs  method.rs
crates/worker/: Cargo.toml
crates/worker/src/: cli.rs  environment.rs  main.rs  worker.rs
grafana/alloy/: config.alloy
grafana/dashboards/: dashboard.yml  logs.json  system_overview.json  transactions.json  user_activity.json
grafana/datasources/: datasources.yml
grafana/promtail/: config.yml
