[workspace]
resolver = "2"
members = [
    "crates/database",
    "crates/database/migration",
    "crates/rpc",
    "crates/worker",
]

[workspace.package]
authors = ["Braqzen"]
edition = "2024"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/braqzen/prod-template"
version = "0.0.0"

[workspace.dependencies]
alloy = { version = "1.1.3", features = ["k256"] }
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
futures-util = "0.3.31"
sea-orm = { version = "1.1.19", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
