[package]
name = "rpc"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
axum.workspace = true
database.path = "../database"
dotenvy.workspace = true
eyre.workspace = true
futures-util.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
