[package]
name = "spammer"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
dotenvy.workspace = true
eyre.workspace = true
rand.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true