[package]
name = "worker"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
database.path = "../database"
dotenvy.workspace = true
eyre.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true